<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="1100dp" >

        <!-- Title -->
        <TextView
            android:id="@+id/deal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/edit_deal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/deal_title"
            android:inputType="text"
            android:ems="14" />
        <!-- End Title -->
        
        <!-- Details -->
        <TextView
            android:id="@+id/deal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/deal_until"
            android:layout_marginTop="69dp"
            android:text="@string/details"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_deal_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/deal_details"
            android:ems="14"
            android:inputType="textMultiLine" />
        <!-- End Details -->
        
        <!-- Restrictions -->
        <TextView
            android:id="@+id/deal_restrictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_deal_details"
            android:layout_marginTop="14dp"
            android:text="@string/restrictions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_deal_restrictions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/edit_deal_details"
            android:layout_below="@+id/deal_restrictions"
            android:ems="10"
            android:inputType="textMultiLine" />
        <!-- End Restrictions -->
        
        <!-- Time start -->
        <TextView
            android:id="@+id/deal_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/deal_start_date"
            android:layout_below="@+id/deal_restrictions"
            android:layout_marginTop="44dp"
            android:text="@string/time_of_day"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TimePicker
            android:id="@+id/edit_deal_timePicker_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/deal_time_start"
            android:layout_toRightOf="@+id/deal_start_date" />
        <!-- End Time stert -->

		<!-- Time stop -->
        <TextView
            android:id="@+id/deal_until"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_deal_timePicker_start"
            android:text="@string/until"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TimePicker
            android:id="@+id/edit_deal_timePicker_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edit_deal_timePicker_start"
            android:layout_below="@+id/deal_until" />
        <!-- End Time stop -->
        
		<!-- Day of the week -->
        <TextView
            android:id="@+id/deal_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_deal_timePicker_stop"
            android:layout_marginTop="16dp"
            android:text="@string/day_of_week"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/deal_day_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/deal_day_of_week"
            android:entries="@array/day_of_week_dropdown"
        	android:prompt="@string/deal_type_prompt" />
		<!-- End Day of week -->
		
		<!-- Start Date -->
		<TextView
            android:id="@+id/deal_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/deal_day_spinner"
            android:text="@string/start_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		
		<!-- End Start Date -->
		
		<!-- Date stop -->
        <TextView
            android:id="@+id/deal_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/deal_start_date"
            android:layout_marginTop="30dp"
            android:text="@string/end_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        
        <!-- End Date stop -->

        <!-- Deal type -->
        <TextView
            android:id="@+id/deal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/deal_end_date"
            android:layout_marginTop="20dp"
            android:text="@string/type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/deal_type_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/deal_type"
            android:layout_toRightOf="@+id/deal_type"
            android:textOff="Drinks"
            android:textOn="Food" />
        <!-- End Deal type -->

		<!-- Submit button -->
        <Button
            android:id="@+id/submitDealButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deal_type_switch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/submit" />
        <!-- End Submit button -->

    </RelativeLayout>

</ScrollView>